# traverse

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
apps/content/: admin.py  apps.py  models.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py  0002_alter_blogcategory_options_and_more.py
apps/core/: admin.py  apps.py  context_processors.py  middleware.py  models.py  sitemaps.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_siteconfiguration.py  0003_siteconfiguration_footer_description_and_more.py  0004_siteconfiguration_is_active.py
apps/glossary/: __init__.py  admin.py  apps.py  middleware.py  models.py  urls.py  views.py
apps/glossary/migrations/: 0001_initial.py  0002_alter_term_abbreviation_alter_term_auto_link_and_more.py
apps/team/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/team/migrations/: 0001_initial.py
apps/trips/: admin.py  apps.py  models.py  urls.py  views.py
apps/trips/migrations/: 0001_initial.py  0002_remove_trip_gallery_alter_trip_featured_image_and_more.py  (+2 more)
config/: settings.py  urls.py
templates/: base.html
templates/content/: post_detail.html  post_list.html
templates/core/: contact.html  home.html  region_detail.html  region_list.html  tag_detail.html  tag_list.html
templates/glossary/: term_detail.html  term_list.html
templates/team/: member_detail.html  member_list.html
templates/trips/: heli_list.html  trip_detail.html  trip_list.html
(+1 files in other folders)
